# High_Performance_Python_Library_With_Rust_PyO3

./: Cargo.toml  README.md  help.txt  pyproject.toml  test.py
.github/workflows/: CI.yml
src/: lib.rs  utils.rs
test_videos/webm_videos/: 16811327162570.webm:Zone.Identifier
